--- a/deploy.yml
+++ b/deploy.yml
@@ -2,6 +2,8 @@
 - name: "Apache Installation Using docker"
   hosts: prod
   become: true
+  vars_files:
+    - files/secrets/credentials.yml
   pre_tasks:
     - name: Install some package
       package: name='{{ item }}' state=present
